--- a/Css/jogador2.css
+++ b/Css/jogador2.css
@@ -9,9 +9,32 @@
   box-sizing: border-box;
 }
 
+p {
+  display: flex;
+  justify-content: center;
+  margin: 40px auto;
+  padding: 10px;
+  width: 60%;
+  color: #000;
+  background-color: #fabe02;
+  font-size: 22px;
+}
+
+div {
+  text-align: center;
+}
+
+button {
+  width: 100px;
+  padding: 5px;
+  cursor: pointer;
+  background-color: #fabe02;
+  border: 1px solid #fabe02;
+  border-radius: 5px;
+}
+
 body {
-  font-family: "lol";
-  background-image: url(./../img/fundo.svg);
+  background-image: url(./../img/fundo1.svg);
   background-repeat: no-repeat;
   background-size: cover;
 }
@@ -20,7 +43,6 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
-  margin: 50px;
 }
 
 .foto-card2 {
@@ -43,10 +65,11 @@ body {
   margin: 10px;
   padding: 15px;
   border-radius: 10px;
+  font-family: "lol";
 }
 
 footer {
-  margin-top: 160px;
+  margin-top: 130px;
   text-align: center;
   color: #fabe02;
   font-family: Arial, Helvetica, sans-serif;
