--- a/Css/jogador2.css
+++ b/Css/jogador2.css
@@ -25,12 +25,13 @@ div {
 }
 
 button {
-  width: 100px;
-  padding: 5px;
+  width: 120px;
+  padding: 10px;
   cursor: pointer;
   background-color: #fabe02;
   border: 1px solid #fabe02;
   border-radius: 5px;
+  font-size: 14px;
 }
 
 body {
@@ -63,13 +64,15 @@ body {
   color: #f2f2f2;
   border: 1px solid #fabe02;
   margin: 10px;
-  padding: 15px;
+  padding: 12px;
   border-radius: 10px;
   font-family: "lol";
+  font-size: 16px;
+  letter-spacing: 0.2rem;
 }
 
 footer {
-  margin-top: 100px;
+  margin-top: 90px;
   text-align: center;
   color: #fabe02;
   font-family: Arial, Helvetica, sans-serif;
