--- a/Css/jogador2.css
+++ b/Css/jogador2.css
@@ -18,6 +18,7 @@ p {
   color: #000;
   background-color: #fabe02;
   font-size: 22px;
+  border-radius: 10px;
 }
 
 div {
@@ -44,6 +45,8 @@ body {
   display: flex;
   justify-content: center;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
 }
 
 .foto-card2 {
@@ -76,4 +79,16 @@ footer {
   text-align: center;
   color: #fabe02;
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.box-pergunta {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: auto;
+}
+
+.pergunta {
+  text-align: center;
 }
