--- a/Css/fimdejogo.css
+++ b/Css/fimdejogo.css
@@ -32,12 +32,14 @@ main {
 p {
   font-size: 25px;
   margin-bottom: 30px;
+  color: #f2f2f2;
 }
 
 .button {
   padding: 10px;
-  color: #fabe02;
-  font-size: 17px;
+  color: #f2f2f2;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 16px;
   border-radius: 10px;
   text-decoration: none;
   border: 1px solid #fabe02;
